--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,5 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: run script
         run: python3 ./main.py
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
